added constants & fixes